apply master layout to the vet page . closes #17

--- a/pet-clinic-web/src/main/resources/templates/vet/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vet/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="hellllllo"></h1>
+    <h2 th:text="Veterinarians"></h2>
 
-    <table>
+    <table id="vets" class="table table-striped">
         <thead>
             <tr>
-                <td> id </td>
-                <td> firstName</td>
-                <td> lastName</td>
+                <th> id </th>
+                <th> firstName</th>
+                <th> lastName</th>
             </tr>
         </thead>
         <tr th:each="vet : ${vets}">
