--- a/pet-clinic-web/src/main/resources/templates/vet/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vet/index.html
@@ -5,22 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-    <h2 th:text="Veterinarians"></h2>
+        <h2>Veterinarians</h2>
 
-    <table id="vets" class="table table-striped">
-        <thead>
+        <table id="vets" class="table table-striped">
+            <thead>
             <tr>
-                <th> id </th>
-                <th> firstName</th>
-                <th> lastName</th>
+                <th>Name</th>
+                <th>Specialties</th>
             </tr>
-        </thead>
-        <tr th:each="vet : ${vets}">
-            <td th:text=${vet?.id}></td>
-            <td th:text=${vet?.firstName}></td>
-            <td th:text=${vet?.lastName}></td>
-        </tr>
-    </table>
+            </thead>
+            <tbody>
+            <tr th:each="vet : ${vets}">
+                <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+                <td><span th:each="specialty : ${vet.specialities}"
+                          th:text="${specialty.description + ' '}" /> <span
+                        th:if="${vet?.specialities?.size() == 0}">none</span></td>
+            </tr>
+            </tbody>
+        </table>
 
 </body>
 </html>
